// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button default 1`] = `
"<Frame width={100} height={40}>
  <Button>Submit</Button>
</Frame>;
"
`;

exports[`element as prop default 1`] = `
"<Frame width={100} height={40}>
  <FormControlLabel
    control={<Checkbox checked={false} disabled={false} style={{}} />}
    label=\\"Hello world\\"
  />
</Frame>;
"
`;

exports[`generate file chakra 1`] = `
Object {
  ".postcssrc": "{
  \\"plugins\\": {
    \\"tailwindcss\\": {}
  }
}",
  "App.tsx": "import { ChakraProvider, Box } from '@chakra-ui/react';
import * as React from 'react';
/**
 * To make your layout responsive, delete this Frame component and replace any
 * instance of it with your own layout components that use e.g. flexbox.
 */
function Frame(
  props: React.PropsWithChildren<
    Pick<React.CSSProperties, 'left' | 'top' | 'width' | 'height'>
  >
) {
  return (
    <Box
      style={{
        position: 'absolute',
        left: props.left,
        top: props.top,
        width: props.width,
        height: props.height,
      }}
    >
      {props.children}
    </Box>
  );
}
export function App() {
  return <ChakraProvider />;
}
",
  "README.md": "# My App

## Local Development

\`\`\`
npm install
npm run dev
\`\`\`

## Production Build

\`\`\`
npm run build
\`\`\`
",
  "index.css": "@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
",
  "index.html": "<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>My App</title>
  </head>
  <body>
    <div id=\\"root\\"></div>
    <link href=\\"./index.css\\" rel=\\"stylesheet\\" />
    
    <script type=\\"module\\" src=\\"index.tsx\\"></script>
  </body>
</html>",
  "index.tsx": "import { createRoot } from \\"react-dom/client\\";
import * as React from 'react';

import { App } from \\"./App\\";

const rootElement = document.getElementById(\\"root\\");
const root = createRoot(rootElement!);

root.render(<App />);",
  "package.json": "{
  \\"name\\": \\"my-app\\",
  \\"version\\": \\"0.0.1\\",
  \\"scripts\\": {
    \\"dev\\": \\"parcel index.html --open\\",
    \\"build\\": \\"parcel build index.html\\"
  },
  \\"dependencies\\": {
    \\"react\\": \\"^18\\",
    \\"react-dom\\": \\"^18\\",
    \\"@chakra-ui/react\\": \\"^2\\",
    \\"@chakra-ui/system\\": \\"^2\\",
    \\"@emotion/react\\": \\"^11\\",
    \\"@emotion/styled\\": \\"^11\\",
    \\"framer-motion\\": \\"^10\\",
    \\"@chakra-ui/icons\\": \\"^2\\"
  },
  \\"devDependencies\\": {
    \\"autoprefixer\\": \\"10.4.14\\",
    \\"parcel\\": \\"^2.8.3\\",
    \\"postcss\\": \\"8.4.21\\",
    \\"tailwindcss\\": \\"3.2.7\\",
    \\"process\\": \\"^0.11.10\\",
    \\"@types/react\\": \\"^18\\",
    \\"@types/react-dom\\": \\"^18\\"
  }
}",
  "tailwind.config.js": "module.exports = {
  content: [\\"./*.{html,js,jsx,ts,tsx}\\"],
  theme: {
    extend: {},
  },
  variants: {},
  plugins: [],
};",
}
`;

exports[`generate file mui 1`] = `
Object {
  ".postcssrc": "{
  \\"plugins\\": {
    \\"tailwindcss\\": {}
  }
}",
  "App.tsx": "import { ThemeProvider, FormControlLabel, Checkbox, Box } from '@mui/material';
import '@fontsource/roboto/latin.css';
import * as React from 'react';
/**
 * To make your layout responsive, delete this Frame component and replace any
 * instance of it with your own layout components that use e.g. flexbox.
 */
function Frame(
  props: React.PropsWithChildren<
    Pick<React.CSSProperties, 'left' | 'top' | 'width' | 'height'>
  >
) {
  return (
    <Box
      style={{
        position: 'absolute',
        left: props.left,
        top: props.top,
        width: props.width,
        height: props.height,
      }}
    >
      {props.children}
    </Box>
  );
}
export function App() {
  return (
    <ThemeProvider>
      <Frame width={100} height={40}>
        <FormControlLabel
          control={<Checkbox checked={false} disabled={false} style={{}} />}
          label=\\"Hello world\\"
        />
      </Frame>
    </ThemeProvider>
  );
}
",
  "README.md": "# My App

## Local Development

\`\`\`
npm install
npm run dev
\`\`\`

## Production Build

\`\`\`
npm run build
\`\`\`
",
  "index.css": "@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
",
  "index.html": "<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\" />
    <title>My App</title>
  </head>
  <body>
    <div id=\\"root\\"></div>
    <link href=\\"./index.css\\" rel=\\"stylesheet\\" />
    
    <script type=\\"module\\" src=\\"index.tsx\\"></script>
  </body>
</html>",
  "index.tsx": "import { createRoot } from \\"react-dom/client\\";
import * as React from 'react';

import { App } from \\"./App\\";

const rootElement = document.getElementById(\\"root\\");
const root = createRoot(rootElement!);

root.render(<App />);",
  "package.json": "{
  \\"name\\": \\"my-app\\",
  \\"version\\": \\"0.0.1\\",
  \\"scripts\\": {
    \\"dev\\": \\"parcel index.html --open\\",
    \\"build\\": \\"parcel build index.html\\"
  },
  \\"dependencies\\": {
    \\"react\\": \\"^18\\",
    \\"react-dom\\": \\"^18\\",
    \\"@mui/material\\": \\"^5\\",
    \\"@emotion/react\\": \\"^11\\",
    \\"@emotion/styled\\": \\"^11\\",
    \\"@mui/icons-material\\": \\"^5\\",
    \\"@fontsource/roboto\\": \\"^5\\"
  },
  \\"devDependencies\\": {
    \\"autoprefixer\\": \\"10.4.14\\",
    \\"parcel\\": \\"^2.8.3\\",
    \\"postcss\\": \\"8.4.21\\",
    \\"tailwindcss\\": \\"3.2.7\\",
    \\"process\\": \\"^0.11.10\\",
    \\"@types/react\\": \\"^18\\",
    \\"@types/react-dom\\": \\"^18\\"
  }
}",
  "tailwind.config.js": "module.exports = {
  content: [\\"./*.{html,js,jsx,ts,tsx}\\"],
  theme: {
    extend: {},
  },
  variants: {},
  plugins: [],
};",
}
`;

exports[`link with icon 1`] = `
"<Frame width={100} height={40}>
  <Link href=\\"#\\">Test #icon-arrow-right</Link>
</Frame>;
"
`;

exports[`text default 1`] = `
"<Frame width={100} height={40}>
  <Text>Hello world #center #text-red-500</Text>
</Frame>;
"
`;

exports[`text escape jsx 1`] = `
"<Frame width={100} height={40}>
  <Text>{'Hello \\"\\\\'<{test}>\\\\'\\" world'}</Text>
</Frame>;
"
`;
